<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/firm_color_gray">

    <TextView
        android:id="@+id/tv_list_of_doc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:gravity="center_horizontal"
        android:text="@string/list_of_documents"
        android:textColor="@color/text_color_dark_gray"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <RadioButton
        android:id="@+id/rb_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_rb_one"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/text_color_dark_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_of_doc"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <RadioButton
        android:id="@+id/rb_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/text_rb_two"
        android:textColor="@color/text_color_dark_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_one"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <RadioButton
        android:id="@+id/rb_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/text_rb_three"
        android:textColor="@color/text_color_dark_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_two"
        app:layout_constraintHorizontal_bias="0.0" />

    <RadioButton
        android:id="@+id/rb_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/text_rb_four"
        android:textColor="@color/text_color_dark_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_three"
        app:layout_constraintHorizontal_bias="0.0" />

    <RadioButton
        android:id="@+id/rb_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/text_rb_five"
        android:textColor="@color/text_color_dark_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_four"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/bt_ok_list_doc"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/b_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_five"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bt_sample_receipt"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/ic_navigate_next_black_36dp"
        app:layout_constraintBottom_toBottomOf="@+id/rb_four"
        app:layout_constraintLeft_toRightOf="@+id/rb_four"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rb_four"
        app:layout_constraintVertical_bias="0.514" />

    <Button
        android:id="@+id/bt_military_registration"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/ic_navigate_next_black_36dp"
        app:layout_constraintBottom_toBottomOf="@+id/rb_five"
        app:layout_constraintLeft_toRightOf="@+id/rb_five"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rb_five"
        app:layout_constraintVertical_bias="0.485" />

</android.support.constraint.ConstraintLayout>